kubernetes/namespaces/monitoring/grafana-agent.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: grafana-agent
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: grafana-agent
  template:
    metadata:
      labels:
        app: grafana-agent
    spec:
      serviceAccount: grafana-agent
      containers:
        - name: agent
          image: grafana/agent:v0.35.0
          args:
            - -config.file=/etc/agent/agent.yaml
            - -metrics.wal-directory=/var/lib/agent/wal
            - -enable-features=integrations-next
          ports:
            - containerPort: 9090
              name: http-metrics
          volumeMounts:
            - name: config
              mountPath: /etc/agent
            - name: data
              mountPath: /var/lib/agent
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker/containers
              readOnly: true
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            privileged: true
            runAsUser: 0
      volumes:
        - name: config
          configMap:
            name: grafana-agent-config
        - name: data
          hostPath:
            path: /var/lib/grafana-agent
            type: DirectoryOrCreate
        - name: pods
          hostPath:
            path: /var/log/pods
            type: DirectoryOrCreate
        - name: docker
          hostPath:
            path: /var/lib/docker/containers
            type: DirectoryOrCreate
