kubernetes/namespaces/monitoring/grafana-alloy.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: grafana-alloy
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: grafana-alloy
  template:
    metadata:
      labels:
        app: grafana-alloy
    spec:
      serviceAccount: grafana-alloy
      containers:
        - name: alloy
          image: otel/opentelemetry-collector-contrib:0.90.1
          args:
            - --config=/etc/alloy/alloy.yaml
          ports:
            - containerPort: 9090
              name: http-metrics
          volumeMounts:
            - name: config
              mountPath: /etc/alloy
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker/containers
              readOnly: true
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            privileged: true
            runAsUser: 0
      volumes:
        - name: config
          configMap:
            name: grafana-alloy-config
        - name: pods
          hostPath:
            path: /var/log/pods
            type: DirectoryOrCreate
        - name: docker
          hostPath:
            path: /var/lib/docker/containers
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-alloy
  namespace: monitoring
spec:
  selector:
    app: grafana-alloy
  ports:
    - name: http-metrics
      port: 9090
      targetPort: 9090
